--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
         "illuminate/support": "4.x",
         "illuminate/translation": "4.x",
         "illuminate/database": "4.x",
-        "planners/model": "1.0"
+        "waavi/model": "1.0"
     },
     "autoload": {
         "classmap": [
