--- a/composer.json
+++ b/composer.json
@@ -1,26 +1,27 @@
 {
     "name": "Planners/translation",
-    "version":  "1.0",
+    "version":  "1.0.3.4",
     "description": "A Translation package for Laravel 4 with database and cache support",
     "license": "MIT",
     "authors": [
         {
-            "name": "Planners",
-            "email": ""
+            "name": "Waavi",
+            "email": "info@waavi.com"
         }
     ],
     "require": {
         "php": ">=5.3.0",
         "illuminate/support": "4.x",
         "illuminate/translation": "4.x",
-        "illuminate/database": "4.x"
+        "illuminate/database": "4.x",
+        "waavi/model": "1.0"
     },
     "autoload": {
         "classmap": [
             "src/migrations"
         ],
         "psr-0": {
-            "Planners\\Translation": "src/"
+            "Waavi\\Translation": "src/"
         }
     },
     "minimum-stability": "dev"
