update: composer updates;

--- a/composer.json
+++ b/composer.json
@@ -1,8 +1,11 @@
 {
-    "name": "Planners/translation",
+    "name": "waavi/translation",
     "version":  "1.0.3.4",
     "description": "A Translation package for Laravel 4 with database and cache support",
     "license": "MIT",
+    "replace": {
+        "Waavi/translation":"*"
+    },
     "authors": [
         {
             "name": "Waavi",
