--- a/composer.json
+++ b/composer.json
@@ -14,11 +14,14 @@
     ],
     "require": {
         "php": ">=5.3.0",
-        "illuminate/support": "4.x",
-        "illuminate/translation": "4.x",
-        "illuminate/database": "4.x",
         "waavi/model": "1.0"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url": "git@github.com/arsonx/model.git"
+        }
+    ],    
     "autoload": {
         "classmap": [
             "src/migrations"
